force-app/main/default/objects/Contact/fields/hed__Primary_Household__c.field-meta.xml
<CustomField>
    <fullName>hed__Primary_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the main Household (Account record) this Contact is associated with.</description>
    <inlineHelpText>Référence le foyer principal (enregistrement Compte) auquel ce contact est associé.</inlineHelpText>
    <label>Primary Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Primary Household)</relationshipLabel>
    <relationshipName>Household_Members</relationshipName>
    <type>Lookup</type>
</CustomField>