force-app/main/default/objects/Contact/fields/hed__SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>hed__SMS_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a person wants to receive SMS communications.</description>
    <inlineHelpText>Indicates whether a person wants to receive SMS communications.</inlineHelpText>
    <label>SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>