force-app/main/default/objects/Contact/fields/hed__WorkPhone__c.field-meta.xml
<CustomField>
    <fullName>hed__WorkPhone__c</fullName>
    <description>The work phone number for this person.</description>
    <inlineHelpText>Le numéro de téléphone professionnel de cette personne.</inlineHelpText>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>