force-app/main/default/objects/Contact/fields/ID_FEG__c.field-meta.xml
<CustomField>
    <fullName>ID_FEG__c</fullName>
    <externalId>true</externalId>
    <label>ID FEG</label>
    <length>60</length>
    <type>Text</type>
</CustomField>