force-app/main/default/objects/Contact/fields/ID_Hivebrite__c.field-meta.xml
<CustomField>
    <fullName>ID_Hivebrite__c</fullName>
    <externalId>true</externalId>
    <label>ID Hivebrite</label>
    <length>10</length>
    <type>Text</type>
</CustomField>