force-app/main/default/objects/Contact/fields/Identifiant_dipl_m__c.field-meta.xml
<CustomField>
    <fullName>Identifiant_dipl_m__c</fullName>
    <externalId>true</externalId>
    <label>Identifiant diplômé</label>
    <length>8</length>
    <type>Text</type>
</CustomField>