force-app/main/default/objects/Contact/fields/Identifiant_Etudiant__c.field-meta.xml
<CustomField>
    <fullName>Identifiant_Etudiant__c</fullName>
    <label>Identifiant Etudiant</label>
    <length>8</length>
    <type>Text</type>
</CustomField>