force-app/main/default/objects/Contact/fields/Incub_l_EMLyon__c.field-meta.xml
<CustomField>
    <fullName>Incub_l_EMLyon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incubé à l&apos;EMLyon</label>
    <type>Checkbox</type>
</CustomField>