force-app/main/default/objects/Contact/fields/Informations_carriere__c.field-meta.xml
<CustomField>
    <fullName>Informations_carriere__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informations carrière</label>
    <type>Checkbox</type>
</CustomField>