force-app/main/default/objects/Contact/fields/Informations_compl_mentaires__c.field-meta.xml
<CustomField>
    <fullName>Informations_compl_mentaires__c</fullName>
    <label>Informations complémentaires</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>