force-app/main/default/objects/Contact/fields/Int_r_t_pour__c.field-meta.xml
<CustomField>
    <fullName>Int_r_t_pour__c</fullName>
    <label>Intérêt pour</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expert Panel</fullName>
            </value>
            <value>
                <fullName>Conférence Carrière Etudiants</fullName>
            </value>
            <value>
                <fullName>Mock interview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>