force-app/main/default/objects/Contact/fields/Interaction_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Interaction_LinkedIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interaction LinkedIn</label>
    <type>Checkbox</type>
</CustomField>