force-app/main/default/objects/Contact/fields/Lieu_ls__c.field-meta.xml
<CustomField>
    <fullName>Lieu_ls__c</fullName>
    <label>Lieu</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lyon</fullName>
            </value>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>