force-app/main/default/objects/Contact/fields/Liste_r_le__c.field-meta.xml
<CustomField>
    <fullName>Liste_r_le__c</fullName>
    <label>Liste rôle</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Cat_gorie_r_le__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Membre de l&apos;AG AESCRA</fullName>
            </value>
            <value>
                <fullName>Membre  du CA de l&apos;AESCRA</fullName>
            </value>
            <value>
                <fullName>membre conseil d&apos;administration Alliance</fullName>
            </value>
            <value>
                <fullName>Membre Comex Fondation</fullName>
            </value>
            <value>
                <fullName>Réseaux d&apos;accompagement créateurs d&apos;Eses</fullName>
            </value>
            <value>
                <fullName>Membre Conseil Surveillance CDME</fullName>
            </value>
            <value>
                <fullName>Membre Associés CCI</fullName>
            </value>
            <value>
                <fullName>Membre Bureau Elus CCI</fullName>
            </value>
            <value>
                <fullName>Membre Elus CCI</fullName>
            </value>
            <value>
                <fullName>Membre Commision Enseignement CCI</fullName>
            </value>
            <value>
                <fullName>Membre PRES</fullName>
            </value>
            <value>
                <fullName>Membres CA ADEM LYON</fullName>
            </value>
            <value>
                <fullName>Dirigeant du CAC 40</fullName>
            </value>
            <value>
                <fullName>Dirigeant créateur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>