force-app/main/default/objects/Contact/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Remplir avec l&apos;adresse email.</inlineHelpText>
    <label>Login</label>
    <type>Email</type>
</CustomField>