force-app/main/default/objects/Contact/fields/Membre_EML_Connect__c.field-meta.xml
<CustomField>
    <fullName>Membre_EML_Connect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Membre EML Connect</label>
    <type>Checkbox</type>
</CustomField>