force-app/main/default/objects/Contact/fields/Membre_vie__c.field-meta.xml
<CustomField>
    <fullName>Membre_vie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Membre à vie</label>
    <type>Checkbox</type>
</CustomField>