force-app/main/default/objects/Contact/fields/Mode_d_apprentissage__c.field-meta.xml
<CustomField>
    <fullName>Mode_d_apprentissage__c</fullName>
    <label>Mode d&apos;apprentissage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Présentiel</fullName>
            </value>
            <value>
                <fullName>E-learning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>