force-app/main/default/objects/Contact/fields/Mode_de_financement__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_financement__c</fullName>
    <label>Mode de financement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fond propre</fullName>
            </value>
            <value>
                <fullName>Prêt bancaire</fullName>
            </value>
            <value>
                <fullName>Entreprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>