force-app/main/default/objects/Contact/fields/N_a_pas_obtenu_son_dipl_me_EMLYON__c.field-meta.xml
<CustomField>
    <fullName>N_a_pas_obtenu_son_dipl_me_EMLYON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>N&apos;a pas obtenu son diplôme EMLYON</label>
    <type>Checkbox</type>
</CustomField>