force-app/main/default/objects/Contact/fields/Nationalit__c.field-meta.xml
<CustomField>
    <fullName>Nationalit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nationalité</label>
    <referenceTo>Pays__c</referenceTo>
    <relationshipLabel>Contacts (Nationalité)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>