force-app/main/default/objects/Contact/fields/Nature_du_premier_contact__c.field-meta.xml
<CustomField>
    <fullName>Nature_du_premier_contact__c</fullName>
    <inlineHelpText>décrit le canal technique d’arrivée de la fiche piste dans le système</inlineHelpText>
    <label>Canal d&apos;acquisition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adwords</fullName>
            </value>
            <value>
                <fullName>Agent commercial</fullName>
            </value>
            <value>
                <fullName>Appel d’offre</fullName>
            </value>
            <value>
                <fullName>Appel ou Email entrant</fullName>
            </value>
            <value>
                <fullName>Application mobile</fullName>
            </value>
            <value>
                <fullName>Apport Professeur/Intervenant</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Campus Day virtuel</fullName>
            </value>
            <value>
                <fullName>Directories/ Guides</fullName>
            </value>
            <value>
                <fullName>Display/ Banners</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Emailing Externe</fullName>
            </value>
            <value>
                <fullName>Evénement/ Conférence</fullName>
            </value>
            <value>
                <fullName>Fichiers externes</fullName>
            </value>
            <value>
                <fullName>Foisonnement</fullName>
            </value>
            <value>
                <fullName>Formulaire Candidater</fullName>
            </value>
            <value>
                <fullName>Forum/ Salon</fullName>
            </value>
            <value>
                <fullName>Import contacts</fullName>
            </value>
            <value>
                <fullName>Master class</fullName>
            </value>
            <value>
                <fullName>Module Chat</fullName>
            </value>
            <value>
                <fullName>Open class</fullName>
            </value>
            <value>
                <fullName>Prescripteurs</fullName>
            </value>
            <value>
                <fullName>Présentation aux écoles/ universités</fullName>
            </value>
            <value>
                <fullName>Présentation étudiants</fullName>
            </value>
            <value>
                <fullName>Prospection</fullName>
            </value>
            <value>
                <fullName>Récurrence</fullName>
            </value>
            <value>
                <fullName>Réseaux sociaux</fullName>
            </value>
            <value>
                <fullName>Réunion d&apos;information France</fullName>
            </value>
            <value>
                <fullName>Réunion d&apos;information Internationale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>