force-app/main/default/objects/Contact/fields/Nb_car_Nom__c.field-meta.xml
<CustomField>
    <fullName>Nb_car_Nom__c</fullName>
    <description>Nb de caractères du nom pour des besoins de détections d&apos;anomalies</description>
    <formula>LEN( LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nb car Nom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>