force-app/main/default/objects/Contact/fields/Nb_jours_depuis_modification_Contact__c.field-meta.xml
<CustomField>
    <fullName>Nb_jours_depuis_modification_Contact__c</fullName>
    <description>Resitue le nombre de jours écoulés depuis la dernière modification du contact. Utilisé pour les filtres dans les rapports.</description>
    <formula>NOW() - LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Resitue le nombre de jours écoulés depuis la dernière modification du contact. Utilisé pour les filtres dans les rapports.</inlineHelpText>
    <label>Nb jours depuis modification Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>