force-app/main/default/objects/Contact/fields/nb_SIP_en_cours__c.field-meta.xml
<CustomField>
    <fullName>nb_SIP_en_cours__c</fullName>
    <description>Indique le nombre total d&apos;opportunités qualifiées (pour l&apos;exercice en cours) pour le contact central de cette opportunité.
Il comptabilise les opportunités de type : Prospect qualifié;Prospect probable;Prospect chaud;Intérêt Supplémentaire</description>
    <label>Nombre d&apos;opportunités Conseiller</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>