force-app/main/default/objects/Contact/fields/nbCar_code_postal_perso__c.field-meta.xml
<CustomField>
    <fullName>nbCar_code_postal_perso__c</fullName>
    <formula>LEN( Adresse_code_postal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nb caractère code postal perso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>