force-app/main/default/objects/Contact/fields/Ne_pas_appeler_sur_professionnel__c.field-meta.xml
<CustomField>
    <fullName>Ne_pas_appeler_sur_professionnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ne pas appeler sur professionnel</label>
    <type>Checkbox</type>
</CustomField>