force-app/main/default/objects/Contact/fields/Ne_pas_contacter_par_mail_TA__c.field-meta.xml
<CustomField>
    <fullName>Ne_pas_contacter_par_mail_TA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ne pas contacter par mail TA</label>
    <type>Checkbox</type>
</CustomField>