force-app/main/default/objects/Contact/fields/Ne_pas_contacter_par_t_l_phone_TA__c.field-meta.xml
<CustomField>
    <fullName>Ne_pas_contacter_par_t_l_phone_TA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ne pas contacter par téléphone TA</label>
    <type>Checkbox</type>
</CustomField>