force-app/main/default/objects/Contact/fields/Ne_pas_contacter_PartenariatFundraisin__c.field-meta.xml
<CustomField>
    <fullName>Ne_pas_contacter_PartenariatFundraisin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ne pas contacter Partenariat/Fundraising</label>
    <type>Checkbox</type>
</CustomField>