force-app/main/default/objects/Contact/fields/Ne_souhaite_pas_recevoir_de_courrier_TA__c.field-meta.xml
<CustomField>
    <fullName>Ne_souhaite_pas_recevoir_de_courrier_TA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ne souhaite pas recevoir de courrier TA</label>
    <type>Checkbox</type>
</CustomField>