force-app/main/default/objects/Contact/fields/Newsletter_Forever__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Forever__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Newsletter Forever</label>
    <type>Checkbox</type>
</CustomField>