force-app/main/default/objects/Contact/fields/Niveau_d_tudes__c.field-meta.xml
<CustomField>
    <fullName>Niveau_d_tudes__c</fullName>
    <label>Niveau d&apos;études</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seconde</fullName>
            </value>
            <value>
                <fullName>Première</fullName>
            </value>
            <value>
                <fullName>Terminale</fullName>
            </value>
            <value>
                <fullName>Bac</fullName>
            </value>
            <value>
                <fullName>Bac + 1</fullName>
            </value>
            <value>
                <fullName>Bac + 2</fullName>
            </value>
            <value>
                <fullName>Bac + 3</fullName>
            </value>
            <value>
                <fullName>Bac + 4</fullName>
            </value>
            <value>
                <fullName>Bac + 5 et +</fullName>
            </value>
            <value>
                <fullName>Non renseigné</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>