force-app/main/default/objects/Contact/fields/Niveau_de_fran_ais__c.field-meta.xml
<CustomField>
    <fullName>Niveau_de_fran_ais__c</fullName>
    <label>Niveau de français</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bon</fullName>
            </value>
            <value>
                <fullName>Moyen</fullName>
            </value>
            <value>
                <fullName>Faible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>