force-app/main/default/objects/Contact/fields/Niveau_detudes_numero__c.field-meta.xml
<CustomField>
    <fullName>Niveau_detudes_numero__c</fullName>
    <formula>CASE(TEXT(Niveau_d_tudes__c),
&apos;Seconde&apos;,7,
&apos;Première&apos;,8,
&apos;Terminale&apos;,9,
&apos;Bac&apos;,10,
&apos;Bac + 1&apos;,20,
&apos;Bac + 2&apos;,30,
&apos;Bac + 3&apos;,40,
&apos;Bac + 4&apos;,50,
&apos;Bac + 5 et +&apos;,60,
Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Niveau d&apos;études numéro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>