force-app/main/default/objects/Contact/fields/Nom_Compte__c.field-meta.xml
<CustomField>
    <fullName>Nom_Compte__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom Compte Formule</label>
    <type>Text</type>
</CustomField>