force-app/main/default/objects/Contact/fields/Nom_de_la_jeune_fille__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_la_jeune_fille__c</fullName>
    <label>Nom de naissance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>