force-app/main/default/objects/Contact/fields/Nom_Prenom__c.field-meta.xml
<CustomField>
    <fullName>Nom_Prenom__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, LastName &amp; &quot; &quot; &amp; FirstName,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom Prénom</label>
    <type>Text</type>
</CustomField>