force-app/main/default/objects/Contact/fields/Nombre_opportunit_s__c.field-meta.xml
<CustomField>
    <fullName>Nombre_opportunit_s__c</fullName>
    <label>Nombre d&apos;opportunités total</label>
    <length>4</length>
    <type>Text</type>
</CustomField>