force-app/main/default/objects/Contact/fields/Nombre_opportunites_sur_criteres__c.field-meta.xml
<CustomField>
    <fullName>Nombre_opportunites_sur_criteres__c</fullName>
    <label>Nombre d&apos;opportunités en cours</label>
    <length>4</length>
    <type>Text</type>
</CustomField>