force-app/main/default/objects/Contact/fields/Nouvel_Int_r_t_du_contact__c.field-meta.xml
<CustomField>
    <fullName>Nouvel_Int_r_t_du_contact__c</fullName>
    <label>Intérêt du contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global Bachelor in Business Administration</fullName>
            </value>
            <value>
                <fullName>Global BBA International Admissions</fullName>
            </value>
            <value>
                <fullName>Marketing and Data Science</fullName>
            </value>
            <value>
                <fullName>MSc in Finance – EN</fullName>
            </value>
            <value>
                <fullName>MSc in Finance – FR</fullName>
            </value>
            <value>
                <fullName>MSc in Global Innovation &amp; Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>MSc in Health Management &amp; Data Intelligence</fullName>
            </value>
            <value>
                <fullName>MSc in International Hospitality Management</fullName>
            </value>
            <value>
                <fullName>MSc in Luxury Management &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>MSc in Management - European Triple Degree</fullName>
            </value>
            <value>
                <fullName>MSc in ManagementMSc in Digital</fullName>
            </value>
            <value>
                <fullName>MSc in Sports Industry Management</fullName>
            </value>
            <value>
                <fullName>MSc in Strategy &amp; Consulting</fullName>
            </value>
            <value>
                <fullName>MSc in Supply Chain &amp; Purchasing Management</fullName>
            </value>
            <value>
                <fullName>MS Entrepreneuriat et Management de l&apos;Innovation</fullName>
            </value>
            <value>
                <fullName>MS Juriste Manager International</fullName>
            </value>
            <value>
                <fullName>MS Juriste Manager International Part-Time</fullName>
            </value>
            <value>
                <fullName>MS Management des Entreprises du Vivant et de l&apos;Agroalimentaire</fullName>
            </value>
            <value>
                <fullName>MS Stratégie et Développement d&apos;Affaires Internationales</fullName>
            </value>
            <value>
                <fullName>MS Transformation Digitale Marketing &amp; Stratégie</fullName>
            </value>
            <value>
                <fullName>Programme en Management de la Transition Energétique</fullName>
            </value>
            <value>
                <fullName>Programme Grande Ecole - Admission sur Titre France</fullName>
            </value>
            <value>
                <fullName>Programme Grande Ecole - Concours Classes Préparatoires</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>