force-app/main/default/objects/Contact/fields/NPAI__c.field-meta.xml
<CustomField>
    <fullName>NPAI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPAI</label>
    <type>Checkbox</type>
</CustomField>