force-app/main/default/objects/Contact/fields/NPAI_Personnel__c.field-meta.xml
<CustomField>
    <fullName>NPAI_Personnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPAI Personnel</label>
    <type>Checkbox</type>
</CustomField>