force-app/main/default/objects/Contact/fields/Opportunite_Statut_Candidature_CANEL__c.field-meta.xml
<CustomField>
    <fullName>Opportunite_Statut_Candidature_CANEL__c</fullName>
    <label>Opportunité-Statut Candidature CANEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>