force-app/main/default/objects/Contact/fields/parti_de_l_entreprise__c.field-meta.xml
<CustomField>
    <fullName>parti_de_l_entreprise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>parti de l&apos;entreprise</label>
    <type>Checkbox</type>
</CustomField>