force-app/main/default/objects/Contact/fields/Particule__c.field-meta.xml
<CustomField>
    <fullName>Particule__c</fullName>
    <label>Particule</label>
    <length>6</length>
    <type>Text</type>
</CustomField>