force-app/main/default/objects/Contact/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adresse:Pays</label>
    <referenceTo>Pays__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>